# Copyright © 2018–2021 Trevor Spiteri

# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved. This file is offered as-is,
# without any warranty.

[package]
name = "fixed"
version = "1.7.0"
authors = ["Trevor Spiteri <tspiteri@ieee.org>"]
description = "Fixed-point numbers"
documentation = "https://docs.rs/fixed"
repository = "https://gitlab.com/tspiteri/fixed"
readme = "README.md"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "data-structures", "no-std", "science"]
license = "MIT/Apache-2.0"
edition = "2018"
autobenches = false

[features]
az = []
f16 = []
fail-on-warnings = []
std = []
serde-str = ["serde", "std", "serde/std"]

[dependencies]
typenum = "1.10"
az_crate = { version = "1.1", package = "az" }
half = "1.6"
serde = { version = "1.0.60", default-features = false, optional = true }

[dependencies.num-traits]
version = "0.2.13"
default-features = false
features = ["i128"]
optional = true

[dev-dependencies]
rand = { version = "0.8", default-features = false }
rand_xoshiro = "0.6"
criterion = "0.3"
num-traits = { version = "0.2", default-features = false }

[package.metadata.docs.rs]
features = ["num-traits", "serde", "std"]

[[bench]]
name = "bench_main"
harness = false
