# Copyright © 2018–2021 Trevor Spiteri

# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved. This file is offered as-is,
# without any warranty.

[package]
name = "fixed"
version = "1.9.0"
authors = ["Trevor Spiteri <tspiteri@ieee.org>"]
description = "Fixed-point numbers"
documentation = "https://docs.rs/fixed"
repository = "https://gitlab.com/tspiteri/fixed"
readme = "README.md"
keywords = ["fixed", "fixed-point", "mathematics", "numerics"]
categories = ["algorithms", "embedded", "mathematics", "no-std"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
fail-on-warnings = []
serde-str = ["serde", "std", "serde/std"]
std = []

# optional features through optional dependencies:
# serde

# experimental optional features through optional dependencies:
# num-traits

# deprecated
az = []
f16 = []

[dependencies]
az_crate = { version = "1.1", package = "az" }
bytemuck = "1.2"
half = "1.6"
typenum = "1.10"

[dependencies.arbitrary]
version = "1"
optional = true

[dependencies.num-traits]
version = "0.2.13"
default-features = false
features = ["i128"]
optional = true

[dependencies.serde]
version = "1.0.60"
default-features = false
optional = true

[package.metadata.docs.rs]
features = ["arbitrary", "num-traits", "serde", "std"]
